<resources>
    <string name="SS_UNAVAILABLE_DURING_CALL">Unavailable during call</string>
    <string name="actionbar_name">Gear Manager</string>
    <string name="alert_full_screen">Full screen pop-up</string>
    <string name="alert_mini">Mini pop-up</string>
    <string name="alertdialog_backkey_popup_content">Warning</string>
    <string name="alertdialog_disconnect_popup_description">Gear will be disconnected. Use Bluetooth to reconnect.</string>
    <string name="alertdialog_disconnect_popup_new_device_content">This will end your connection with %s.</string>
    <string name="alertdialog_disconnect_popup_new_device_content_for_scs">Your %s will be disconnected from your mobile device. The next time you connect these devices, you must use Bluetooth. Any connections after that can be done via Remote connection.</string>
    <string name="alertdialog_uninstall_popup_content">Uninstall</string>
    <string name="app_name_samsung_gear">Samsung Gear</string>
    <string name="attention_popup_body_app_is_not_installed">%1$s is not installed on your mobile device. To use %2$s on your Gear, download %1$s to your mobile device.</string>
    <string name="attention_popup_title">Attention</string>
    <string name="auto_call_forwarding">Auto call forwarding</string>
    <string name="auto_call_forwarding_att">Auto call forwarding to Gear</string>
    <string name="auto_call_forwarding_desc">Enable Call forwarding automatically while your Gear is disconnected from your mobile device. This will forward incoming calls from your mobile device to your Gear until the devices are reconnected.</string>
    <string name="auto_update">Auto update</string>
    <string name="auto_update_summary">Check for updates automatically</string>
    <string name="backing_up">Backing Up …</string>
    <string name="backup_complete">Backup completed.</string>
    <string name="bnr_backup">Backing up…</string>
    <string name="bnr_bakcup_title">Backup</string>
    <string name="bnr_cancel">Cancel</string>
    <string name="bnr_canel">Cancel</string>
    <string name="bnr_error_occurred">Error occurred</string>
    <string name="bnr_except">%1$s (except %2$s)</string>
    <string name="bnr_except_autolock">Auto lock</string>
    <string name="bnr_except_remoteconnection">Remote connection</string>
    <string name="bnr_except_texttemplate">Text templates</string>
    <string name="bnr_next">Next</string>
    <string name="bnr_no">No</string>
    <string name="bnr_ok">OK</string>
    <string name="bnr_reset_gear">To connect to a new device, the Gear will be reset to its factory settings.</string>
    <string name="bnr_reset_gear_move_setupwizard">The Gear is not fully set up. The setup wizard is currently open on the Gear, but to connect to the Gear, you need to open the setup wizard in Gear Manager on this device too.</string>
    <string name="bnr_reset_initialization">Notice</string>
    <string name="bnr_restore">Restore</string>
    <string name="bnr_restored">Data restored.</string>
    <string name="bnr_setupwizard_title2">Back up and restore</string>
    <string name="bnr_yes">Yes</string>
    <string name="bt_connected">Connected</string>
    <string name="bt_disconnected">Disconnected</string>
    <string name="bt_unpaired">Unpaired</string>
    <string name="button_finish">Finish</string>
    <string name="button_restore">Restore</string>
    <string name="call">CALL</string>
    <string name="call_check_gear_status_when_cfwd">The call forwarding functions Mobile to Gear and Gear to mobile cannot be enabled at the same time.</string>
    <string name="call_dualsim1">SIM card 1</string>
    <string name="call_dualsim1sim2">Both SIM cards</string>
    <string name="call_dualsim2">SIM card 2</string>
    <string name="call_forwarding">Call forwarding</string>
    <string name="call_forwarding_agree">I agree.</string>
    <string name="call_forwarding_desc">Forward incoming calls from your mobile device to your Gear.</string>
    <string name="call_forwarding_desc_vzw">Forward unanswered incoming calls from your phone to your Gear.</string>
    <string name="call_forwarding_disable_msg">A request has been made to disable call forwarding from your mobile device to your Gear. The status of your mobile network and mobile device may affect the results.</string>
    <string name="call_forwarding_enable_msg">A request has been made to enable call forwarding from your mobile device to your Gear. The status of your mobile network and mobile device may affect the results.</string>
    <string name="call_forwarding_for_att_msg">"When Gear is disconnected from your smartphone, incoming calls to mobile device will be forwarded to Gear automatically.
- Your smartphone will ring a few times and then the call will be forwarded to your Gear.
- If you do not answer the call on your Gear, the caller may leave voicemail that you can listen to on your Gear.
Do you want to turn on auto call forwarding now?"</string>
    <string name="call_forwarding_notify_msg">Call forwarding from your mobile device to your Gear is currently enabled. Incoming calls to your mobile device will be forwarded to your Gear. If you do not have your Gear with you, go to Settings and disable Auto forward calls to make sure you do not miss a call.</string>
    <string name="call_forwarding_turning_off_notify_msg">Disabling voice call forwarding...</string>
    <string name="call_forwarding_turning_on_notify_msg">Enabling voice call forwarding...</string>
    <string name="call_no_gear_number">No numbers</string>
    <string name="call_select_dualsim_title">Select SIM card</string>
    <string name="call_voice_control">Voice control</string>
    <string name="callforwarding_help_des1">Switch the device that calls will be forwarded to automatically, depending on whether your devices are connected via Bluetooth or Remote connection.</string>
    <string name="callforwarding_help_des2">Receive calls made to your mobile device on your Gear while you are moving and wearing the Gear and it is remotely connected to the mobile device.</string>
    <string name="cancel">Cancel</string>
    <string name="cf_activated">Activated</string>
    <string name="cf_deactivate_failed">Failed to disable Call forwarding.</string>
    <string name="cf_deactivated">Deactivated</string>
    <string name="clock_new_clock_settings_applied_via_gear">New clock settings applied via Gear.</string>
    <string name="clocks_download_more_clocks">Download more clocks</string>
    <string name="clocks_noti_uninstall_clock">%s will be uninstalled.</string>
    <string name="clocks_noti_uninstall_idle_clock">%1$s will be uninstalled and %2$s will be set as the default clock.</string>
    <string name="clocks_title_basic_clocks">BASIC CLOCKS</string>
    <string name="clocks_title_downloaded_clocks">DOWNLOADED CLOCKS</string>
    <string name="clocks_title_style_clocks">STYLE CLOCKS</string>
    <string name="common_none">None</string>
    <string name="homelayout_apps">APPLICATIONS</string>
    <string name="info_build_number">Software version</string>
    <string name="info_model_number">Model number</string>
    <string name="info_software_update">Software update</string>
    <string name="limit_notification_desc">Block alerts from appearing on the Gear while the mobile device is being used.</string>
    <string name="limit_notification_title">Limit notifications</string>
    <string name="location_info_title">Share location</string>
    <string name="main_disconnected">Disconnected</string>
    <string name="manage_applications">Manage applications</string>
    <string name="manage_notifications">Manage notifications</string>
    <string name="menu_rename">Rename</string>
    <string name="multisim_title">Multi SIM</string>
    <string name="new_notification_list">List view</string>
    <string name="new_notifications_list_desc">Show a list of notifications received on the Gear to the left of the clock.</string>
    <string name="notification_type">Notification type</string>
    <string name="preview_message_desc">Show a preview of received notifications, except for incoming call alerts and alarms, in the notification pop-ups on your Gear.</string>
    <string name="preview_message_title">Preview message</string>
    <string name="samsung_update">Update now</string>
    <string name="screen_off">Keep screen off</string>
    <string name="screen_off_desc">Receive notifications, except incoming call alerts and alarms, on your Gear while its screen is turned off.</string>
    <string name="setting_auto">Auto</string>
    <string name="setting_backup_restore2">Back up and restore</string>
    <string name="setting_basic">BASICS</string>
    <string name="setting_connections">CONNECTIONS</string>
    <string name="setting_home_key_double_pressing">Double pressing home key</string>
    <string name="setting_language_input">LANGUAGE AND INPUT</string>
    <string name="setting_manage_text_templates">Edit text templates</string>
    <string name="setting_mobile_network">Mobile networks</string>
    <string name="setting_palm_motion">Motions</string>
    <string name="setting_palm_swipe">Swipe to capture</string>
    <string name="setting_pause_mute">Mute/pause</string>
    <string name="setting_safety_list">Safety assistance</string>
    <string name="setting_screen_lock">Auto lock</string>
    <string name="setting_screen_lock_desc">Set your mobile device to lock automatically when your Gear is too far away to be detected.</string>
    <string name="setting_screen_secutiry">SCREEN SECURITY</string>
    <string name="setting_smart_relay">Smart relay</string>
    <string name="setting_smart_relay_desc">View content from your Gear on your mobile device by picking up your mobile device.</string>
    <string name="setting_system">SYSTEM</string>
    <string name="setting_textinput_list">Text input methods</string>
    <string name="setting_textinput_templates">Templates</string>
    <string name="setting_wake_up">Wake-up gesture</string>
    <string name="setting_wake_up_desc">Wake up the Gear by raising the arm your Gear is on.</string>
    <string name="settings_application_version">Application version</string>
    <string name="settings_legal_information">Legal information</string>
    <string name="settings_security">Security</string>
    <string name="settings_security_update">Security update</string>
    <string name="settings_security_update_desc">Protect your device from harmful content by improving its security and service.</string>
    <string name="settings_unknown_sources_subtitle">Allow installation of apps from unknown sources.</string>
    <string name="share_location_desc">"Allow Find My Gear and Find My Device to share your Gear and mobile device's location data."</string>
    <string name="threeg_connection">Use Remote connection</string>
    <string name="threeg_connection_subtitle">Connect to your Gear remotely, using Mobile data or Wi-Fi together with your Samsung account.</string>
    <string name="title_alertdialog_disconnect_popup">Disconnect</string>
    <string name="tt_install_voice_data">Install TTS voice data</string>
    <string name="tt_install_voice_data_required">Install additional text-to-speech languages on your Gear.</string>
    <string name="uninstall_applications">Uninstall applications</string>
    <string name="unknown_sources_title">Unknown sources</string>
    <string name="update_summary">Check for updates</string>
    <string name="voice_control_subtitle">Say “Answer” or “Reject”, during the pauses while your Gear is not ringing or vibrating, to answer or reject calls.</string>
    <string name="wifi_only">Wi-Fi only</string>
    <string name="wifi_only_summary">Only download updates when connected to a Wi-Fi network.</string>
    <string name="callforward_xml_load">Call Fwd XML load</string>
    <string name="callforward_xml_save">Call Fwd XML save</string>
    <string name="setting_palm_over">Palm over</string>
</resources>